--- a/templates/aprendizaje.html
+++ b/templates/aprendizaje.html
@@ -19,7 +19,7 @@
   </head>
   <body class="fondo">
     <!-- Barra de navegacion y portada-->
-    <header class="fondos">
+    <header>
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
       >
@@ -53,12 +53,12 @@
         Educación a distancia
       </h1>
     </div>
-    <!-- cuerpo de la seccion-->
-    <section class="indexcards">
+     <!-- cuerpo de la seccion-->
+     <section class="indexcards">
       <p class="introsalud">
         <img
           src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_edu.jpg?v=1589226915200 "
-          class="izquierda"
+          class="izquierda img-thumbnail rounded"
         />
         Sin importar el nivel educativo estés transitando es importante que
         fomentemos el aparendizaje en todo momento en nuestras casas.La
@@ -68,9 +68,9 @@
       </p>
     </section>
     <div class="indexcards">
-      <u><h2 class="margentitulos">Consejos útiles</h2></u>
+      <u><h2>Consejos útiles</h2></u>
 
-      <dl class="margentitulos">
+      <dl>
         <dt><u>Conocimiento de la herramienta:</u></dt>
         <dd>
           Es sumamente necesario tener una buen conocimiento de la plataforma
@@ -78,20 +78,20 @@
           comunicacíon entre alumnos y porofesores y si tenes dudas o preguntas
           no tardes en pedir ayuda.
         </dd>
-        <dt><u>Organización</u></dt>
+        <dt><u>Organización:</u></dt>
         <dd>
           Si bien las clases no son presenciales resulta útli tener una rutina,
           ajustala a tus horarios pero la organización es clave para no
           atrasarse en las tareas.De este modo podrás disfrutar de otras cosas
           que además te gusten.
         </dd>
-        <dt><u>Toma recreos</u></dt>
+        <dt><u>Toma recreos:</u></dt>
         <dd>
           Intercalá intervalos de estudio de no mas de 2 horas con recreos para
           descansar.Está probado que son necesarios para asentar los
           conocimientos.
         </dd>
-        <dt><u>Tecnología</u></dt>
+        <dt><u>Tecnología:</u></dt>
         <dd>
           Nos guste o no la tecnología es nuestro mejor aliado en esta
           circustancia, aprendamos a usarla, familiarizate con los programas de
@@ -101,7 +101,7 @@
           clases virtuales asegurate de tener buena conectividad a una red Wifi
           y que tu computadora se encuentre en buen estado, parte de nuestro deseempeño acádemico dependerá de un adecuado uso de la tecnología.
         </dd>
-        <dt><u>Renovación</u></dt>
+        <dt><u>Renovación:</u></dt>
         <dd>
           Aprovechá para aprender cosas nuevas además de lo estrictamente
           académico.Los idiomas son muy interesantes y hay gran variedad de
