--- a/templates/entrenamiento.html
+++ b/templates/entrenamiento.html
@@ -11,14 +11,15 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <!-- import the webpage's stylesheet -->
+    <!-- Anclaje al archivo de estilos-->
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style.css') }}"
     />
   </head>
   <body class="fondo">
-    <header class="fondos">
+    <!-- Barra de navegacion y portada-->
+    <header>
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
       >
@@ -51,12 +52,13 @@
         </h1>
       </div>
     </header>
+    <!-- cuerpo de la seccion-->
 
     <section class="indexcards">
       <p class="introsalud">
         <img
           src=" https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_img-8012_1.jpg?v=1589334205928"
-          class="izquierda"
+          class="izquierda img-rounded"
           width="450"
           height="450"
         />
