--- a/templates/informacionc.html
+++ b/templates/informacionc.html
@@ -19,7 +19,7 @@
   </head>
   <body class="fondo">
     <!-- Barra de navegacion y portada-->
-    <header class="fondos">
+    <header>
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
       >
@@ -58,6 +58,7 @@
           <h2><u> Pandemia de información:</u></h2>
           Nos encontramos frente a un mar inmenso de información acerca del Corona Virus, de los avances y descubrimientos de la ciencia sobre este tema.Para los curiosos que deseen investigar todo acerca de este virus te recomendamos primero que te pongasen contacto con algunos términos que encontrará en todo texto relacionado a a este virus tan particular.
         </p>
+      </div>
 
 
     <div class="indexcards">
@@ -92,13 +93,13 @@
         </dd>
       </dl>
     </div>
-      </div>
+      
   </section>
   <!-- Imagenes cienia una al lado de la otra-->
   <div style="float:left;width:50%;">
     <div style="padding-right:10px;">
       <div class="text-center">
-        <img src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_cdc-linionbajm4-unsplash_1.jpg?v=1589478553383" class="traino img-thumbnail rounded">
+        <img src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_cdc-linionbajm4-unsplash_1.jpg?v=1589478553383" class="img-thumbnail rounded">
       </div>
     </div></div>
     
@@ -164,7 +165,7 @@
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_descarga.png?v=1589074371681"
             class="mr-3"
-            alt="..."
+            alt="logo nature"
           />
           <div class="media-body">
             <h5 class="mt-0 mb-1">Revista Nature</h5>
@@ -175,7 +176,7 @@
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_sci.jpg?v=1589074595914"
             class="mr-3"
-            alt="..."
+            alt="logo Science"
           />
           <div class="media-body">
             <h5 class="mt-0 mb-1">Science</h5>
@@ -210,7 +211,6 @@
         <a href="/contacto" class=" volver btn btn-dark">Contacto</a>
       </div>
     </section>
-       </div>
-    </section>
   </body>
 </html>
+
