--- a/templates/listasuper.html
+++ b/templates/listasuper.html
@@ -19,7 +19,7 @@
   </head>
   <body class="fondo">
     <!-- Barra de navegacion y portada-->
-    <header class="fondos">
+    <header>
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
       >
@@ -63,7 +63,7 @@
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_jo-sonn-zefy-ocuhv8-unsplash_1.jpg?v=1588951101652"
             class="mr-3"
-            alt="..."
+            alt="foto verduras"
           />
           <div class="media-body">
             <h5 class="mt-0 mb-1"><u>Vitaminas y Minerales</u></h5>
@@ -79,7 +79,7 @@
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_jez-timms-dvrxfih42d0-unsplash%20(1).jpg?v=1588951425926"
             class="mr-3"
-            alt="..."
+            alt="foto carne"
           />
           <div class="media-body">
             <h5 class="mt-0 mb-1"><u>Proteinas</u></h5>
@@ -87,48 +87,48 @@
             celulares y es el constituyente esencial de las células vivas; sus
             funciones biológicas principales entre otras son la de actuar como
             biocatalizador del metabolismo y la de actuar como anticuerpo por
-            esto es de suma importanica obtener proteinas de alta calidad nutricional en nustra rutina. Se recomienda la ingesta de productos
+            esto es de suma importanica obtener proteinas de alta calidad
+            nutricional en nustra rutina. Se recomienda la ingesta de productos
             naturales ya sean animales o vegetales aunque se requiere de un
-            correcto asesoramiento nutricional en éste último para que los requerimientos
-            diarios queden cubiertos.
+            correcto asesoramiento nutricional en éste último para que los
+            requerimientos diarios queden cubiertos.
           </div>
         </li>
         <li class="media my-4">
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_wesual-click-rswz-p9fbq4-unsplash.jpg?v=1588950353912"
             class="mr-3"
-            alt="..."
+            alt="foto pan"
           />
           <div class="media-body">
             <h5 class="mt-0 mb-1"><u>Carbohidratos</u></h5>
             Son la fuente más importante de energía para el cuerpo. El sistema
             digestivo convierte estos hidratos de carbono en glucosa (azúcar en
             la sangre). El cuerpo usa esta azúcar como energía para sus células,
-            tejidos y órganos. Sin ellos no dispondríamos de la
-            energía necesaria para nuestro metabolismo basal.Es importante
-            destacar que se recomienda el consumo de granos y harinas integrales y
-            azucares lo menos refinadas posibles, dado el impacto negativo que
-            tienen los aditivos y conservantes quimícos sobre nuestro sistema
-            inmune.
+            tejidos y órganos. Sin ellos no dispondríamos de la energía
+            necesaria para nuestro metabolismo basal.Es importante destacar que
+            se recomienda el consumo de granos y harinas integrales y azucares
+            lo menos refinadas posibles, dado el impacto negativo que tienen los
+            aditivos y conservantes quimícos sobre nuestro sistema inmune.
           </div>
         </li>
         <li class="media my-4">
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_thought-catalog-emx1ej1bcgu-unsplash.jpg?v=1588950576105"
             class="mr-3"
-            alt="..."
+            alt="foto palta"
           />
           <div class="media-body">
             <h5 class="mt-0 mb-1"><u>Lípidos</u></h5>
             Son un grupo muy amplio presente tanto en organsimos animales como
             vegetales.Los lípidos cumplen funciones diversas en los organismos
-            vivientes como reserva energética, estructurales (formando membranas) y
-            reguladora (como las hormonas esteroides). Además, se les atribuye
-            la capacidad de ser aislantes naturales, ya que son malos
-            conductores del calor.Es de suma importanica destacar el rol de las
-            famosas "Grasas Saludables", son los lípidos de AlTA calidad nutricional las cuales son de
-            vital importanica ya que seran componentes de hormonas esenciales
-            para la vida.
+            vivientes como reserva energética, estructurales (formando
+            membranas) y reguladora (como las hormonas esteroides). Además, se
+            les atribuye la capacidad de ser aislantes naturales, ya que son
+            malos conductores del calor.Es de suma importanica destacar el rol
+            de las famosas "Grasas Saludables", son los lípidos de AlTA calidad
+            nutricional las cuales son de vital importanica ya que seran
+            componentes de hormonas esenciales para la vida.
           </div>
         </li>
       </ul>
@@ -141,7 +141,7 @@
             class="rounded"
             width="70"
             height="70"
-            alt=""
+            alt="foto bolsa mercado"
           />
         </h2>
 
@@ -149,43 +149,39 @@
           <dt><u>Frutas y Verduras</u></dt>
           <dd>
             Serán las fuentes NATURALES de vitaminas y minerales.Algunas ideas
-            son: cítricos(narnja, mandarina y  pomelo -full vitamina C), manzana,
-            banana, kiwi, pera, arandanos, frutos rojos, higos etc.
-            Verduras:
-            hojas verdes(toda la variedad que quieras), tomate, pimientos, remolacha, pepíno, bernejena,
-            calabaza, rabanitos,repollo etc. 
-            RECORDAR: mientras más colores y
-            variedad consumamos de este grupo mejor.
+            son: cítricos(narnja, mandarina y pomelo -full vitamina C), manzana,
+            banana, kiwi, pera, arandanos, frutos rojos, higos etc. Verduras:
+            hojas verdes(toda la variedad que quieras), tomate, pimientos,
+            remolacha, pepíno, bernejena, calabaza, rabanitos,repollo etc.
+            RECORDAR: mientras más colores y variedad consumamos de este grupo
+            mejor.
           </dd>
           <dt><u>Carnes y Lácteos</u></dt>
           <dd>
-            Probablemnte serán una fuente principal de proteinas ; Carnes:
-            vaca, pollo, pescado (si encontrás fresco mejor ) y
-            cerdo(elejí cortes magros), fiámbres( no abusemos de su
-            consumo ya que los embutidos tienen muchos
-            conservantes).
-            Lácteos:quesos, leche y yogurt(probiótico fundamental
-            para nuestro sistema inmune).No olvidarse de los huevos que contien
-            proteinas de alto valor biológico además de otros nutrientes
-            importantes. RECORDAR: asegurate de abastecer las necesidades proteicas.
+            Probablemnte serán una fuente principal de proteinas ; Carnes: vaca,
+            pollo, pescado (si encontrás fresco mejor ) y cerdo(elejí cortes
+            magros), fiámbres( no abusemos de su consumo ya que los embutidos
+            tienen muchos conservantes). Lácteos:quesos, leche y
+            yogurt(probiótico fundamental para nuestro sistema inmune).No
+            olvidarse de los huevos que contien proteinas de alto valor
+            biológico además de otros nutrientes importantes. RECORDAR:
+            asegurate de abastecer las necesidades proteicas.
           </dd>
           <dt><u>Cereales y legumbres</u></dt>
           <dd>
             Harinas integrales de todo tipo, avena y cereales
             integrales.Legumbres (porotos, garbanzos, lentejas
-            etc).Pastas(ravioles, ñoquis, fiedeos, si son integrales mejor ).Pan (si no lo hacemos casero
-            busquemos uno con pocos aditivos y químicos agregados preferentmente
-            de harinas poco refinadas.
-            RECORDAR: elijamos hidratos de carbono de
-            ALTA calidad nutricional
+            etc).Pastas(ravioles, ñoquis, fiedeos, si son integrales mejor ).Pan
+            (si no lo hacemos casero busquemos uno con pocos aditivos y químicos
+            agregados preferentmente de harinas poco refinadas. RECORDAR:
+            elijamos hidratos de carbono de ALTA calidad nutricional
           </dd>
           <dt><u>Grasas Saludables</u></dt>
           <dd>
             Aceite de oliva , semillas (chía, lino, girasol, sésamo etc), frutos
-            secos(maní, avellanas, nueces, castañas, pistacho etc)
-            RECORDAR: moderar su consumo ya que son de alta densidad calórica.
+            secos(maní, avellanas, nueces, castañas, pistacho etc) RECORDAR:
+            moderar su consumo ya que son de alta densidad calórica.
           </dd>
-          
         </dl>
       </div>
     </section>
@@ -204,6 +200,7 @@
     </section>
   </body>
 </html>
+
 
   
     
