--- a/templates/manualp.html
+++ b/templates/manualp.html
@@ -19,7 +19,7 @@
   </head>
   <body class="fondo">
     <!-- Barra de navegacion y portada-->
-    <header class="fondos">
+    <header>
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
       >
@@ -54,10 +54,10 @@
     </div>
     <p class="introsalud">
       <u> Para tomar nota</u>
-      Aquí podes encontrar de forma sencilla la información importante que deberías
-      saber acerca de protoloclos, medidas de seguridad e higiene, restricciones
-      y permisos entre otros anuncios liberados desde el gobierno de la Ciudad
-      de Mendoza para que nos mantengamos siempre informados.
+      Aquí podes encontrar de forma sencilla la información importante que
+      deberías saber acerca de protoloclos, medidas de seguridad e higiene,
+      restricciones y permisos entre otros anuncios liberados desde el gobierno
+      de la Ciudad de Mendoza para que nos mantengamos siempre informados.
     </p>
 
     <section>
@@ -131,24 +131,24 @@
         />
 
         <img
-        src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2F6.jpg?v=1589747790506"
-        class="traino img-thumbnail rounded"
-        width="500"
-        height="500"
-      />
+          src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2F6.jpg?v=1589747790506"
+          class="traino img-thumbnail rounded"
+          width="500"
+          height="500"
+        />
 
-      <img
-      src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2F5.jpg?v=1589747791221"
-      class="traino img-thumbnail rounded"
-      width="500"
-      height="500"
-    />
-    <img
-    src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2F4.jpg?v=1589747791503"
-    class="traino img-thumbnail rounded"
-    width="500"
-    height="500"
-  />
+        <img
+          src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2F5.jpg?v=1589747791221"
+          class="traino img-thumbnail rounded"
+          width="500"
+          height="500"
+        />
+        <img
+          src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2F4.jpg?v=1589747791503"
+          class="traino img-thumbnail rounded"
+          width="500"
+          height="500"
+        />
       </marquee>
     </section>
 
