--- a/templates/psico.html
+++ b/templates/psico.html
@@ -37,7 +37,9 @@
             <a class="nav-link btn btn-dark" href="/">Inicio </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-dark" href="{{ url_for('contacto') }}">Contacto</a>
+            <a class="nav-link btn btn-dark" href="{{ url_for('contacto') }}"
+              >Contacto</a
+            >
           </li>
         </ul>
       </nav>
@@ -90,12 +92,12 @@
               <img
                 src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_frank-vessia-9uprlljfkp8-unsplash_1.jpg?v=1589160069846"
                 class=" card-img card-img-top"
-                alt="..."
+                alt="imagen foco prendido"
               />
               <div class="card-body">
-                <h5 class="card-title">Educación a distancia </h5>
+                <h5 class="card-title">Educación a distancia</h5>
                 <p class="card-text">
-                  Las claves del éxito
+                  Las claves del éxito para aprender en casa
                 </p>
                 <a href="{{ url_for('aprendizaje') }}" class="btn btn-dark"
                   >Ir</a
