--- a/templates/recreacion.html
+++ b/templates/recreacion.html
@@ -11,14 +11,16 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <!-- import the webpage's stylesheet -->
+    <!-- Anclaje al archivo de estilos-->
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style.css') }}"
     />
   </head>
   <body class="fondo">
-    <header class="fondos">
+    <!-- Barra de navegacion y portada-->
+
+    <header>
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
       >
@@ -52,6 +54,7 @@
         Entretenete en casa
       </h1>
     </div>
+    <!-- cuerpo de la seccion-->
     <section class="indexcards">
       <h2><u>Actividades sugeridas </u></h2>
 
@@ -79,7 +82,7 @@
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_popcorn.jpg?v=1589204216219"
             class="mr-3 rounded"
-            alt="baldepochoclos"
+            alt="balde pochoclos"
           />
           <div class="media-body">
             <h5 class="mt-0 mb-1"><u>Cine</u></h5>
@@ -97,7 +100,7 @@
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_spotify_logo.png?v=1589203365278"
             class="mr-3 rounded"
-            alt="..."
+            alt="logo spotify"
           />
           <div class="media-body">
             <h5 class="mt-0 mb-1"><u>Música</u></h5>
@@ -138,10 +141,10 @@
           />
           <div class="media-body">
             <h5 class="mt-0 mb-1"><u>Inspirate</u></h5>
-            Busca tu inspiración de lo que más te guste.El sitio ofical de charlas
-            TED-Ideas Worth Spreading te ofrece una increible cantidad de
-            charlas intersantes para ver según tus gustos personales, ingresá al
-            sitio directamente dessde acá y comenzá tu busca persalizada de
+            Busca tu inspiración de lo que más te guste.El sitio ofical de
+            charlas TED-Ideas Worth Spreading te ofrece una increible cantidad
+            de charlas intersantes para ver según tus gustos personales, ingresá
+            al sitio directamente dessde acá y comenzá tu busca persalizada de
             charlas.
             <a href="https://www.ted.com/" class="btn btn-dark">Ir</a>
           </div>
@@ -155,11 +158,11 @@
           />
           <div class="media-body">
             <h5 class="mt-0 mb-1"><u>Dejate llevar</u></h5>
-            Si te encanta interactuar con gente y la cuarentena te lo impide, Quora
-            es tu lugar. éste sitio ofrece la oportunidad de charlar con gente
-            alrededor de todo el mundo, animate a preguntar y responder sobre
-            los temas que más te gustan, no esperes más y accede a Quora desde
-            acá.
+            Si te encanta interactuar con gente y la cuarentena te lo impide,
+            Quora es tu lugar. éste sitio ofrece la oportunidad de charlar con
+            gente alrededor de todo el mundo, animate a preguntar y responder
+            sobre los temas que más te gustan, no esperes más y accede a Quora
+            desde acá.
             <a href="https://www.quora.com/" class="btn btn-dark">Ir</a>
           </div>
         </li>
