--- a/templates/salud.html
+++ b/templates/salud.html
@@ -63,18 +63,22 @@
         específica y organizada para dar respuesta a un agente patógeno.En este
         caso debemos manetener nuestro sistema inmune activo para estar
         preparados para la posible entrada del virus y que esta respuesta sea la
-        más eficiente posible. Numerosos estudios demuestran que una alimentación
-        saludable es la clave para potenicar al máximoo nuestro sistema de
-        defensas.
+        más eficiente posible. Numerosos estudios demuestran que una
+        alimentación saludable es la clave para potenicar al máximoo nuestro
+        sistema de defensas.
+      </p>
+
       <p class="introsalud">
         <u>Actividad Física:</u>
         El conjunto de reacciones metabólicas asociadas al funcionamiento del
-        orgamismo se vera potenciado cuando un individuo goze de buena
-        salud. Para ello resulta de vital importancia la actividad física.La
+        orgamismo se vera potenciado cuando un individuo goze de buena salud.
+        Para ello resulta de vital importancia la actividad física.La
         Organización Mundial de la Salud recomienda oxigenar y mover el cuerpo
-        al menos 30 minutos al dia. El ejercicio previene enfermedades cardio-vasuclares y reduce la hipertenión entre muchísimos otros beneficios .También libera gran cantidad de endorfinas que tieenen efectos de placer
-        y euforia en el cererbro causando sensación de bien estar en el individuo
-        factor de gran importanica en la situación actual.
+        al menos 30 minutos al dia. El ejercicio previene enfermedades
+        cardio-vasuclares y reduce la hipertenión entre muchísimos otros
+        beneficios .También libera gran cantidad de endorfinas que tieenen
+        efectos de placer y euforia en el cererbro causando sensación de bien
+        estar en el individuo factor de gran importanica en la situación actual.
       </p>
       <div class="container mt-5 mb-5">
         <div class="row justify-content-start">
@@ -86,9 +90,10 @@
                 alt="..."
               />
               <div class="card-body">
-                <h5 class="card-title"> Nutrición en tiempos de pandemia </h5>
+                <h5 class="card-title">Nutrición en tiempos de pandemia</h5>
                 <p class="card-text">
-                  Infromación nutrcional y lista de compras inteligente para reforzar el sistema inmune
+                  Infromación nutrcional y lista de compras inteligente para
+                  reforzar el sistema inmune
                 </p>
                 <a href="{{ url_for('listasuper') }}" class="btn btn-dark"
                   >Ir</a
@@ -132,4 +137,3 @@
     </section>
   </body>
 </html>
-
