--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -11,7 +11,7 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-   <!-- Anclaje al archivo de estilos-->
+    <!-- Anclaje al archivo de estilos-->
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style.css') }}"
@@ -19,7 +19,7 @@
   </head>
   <body class="fondo">
     <!-- Barra de navegacion y portada de la sección-->
-    <header class="fondos">
+    <header>
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
       >
@@ -52,7 +52,7 @@
     </header>
     <section>
       <p class="textoconta">
-        Trinidad González Padin: 2944581418<br/>
+        Trinidad González Padin: 2944581418<br />
 
         <img
           src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_2pic.jpg?v=1589739816737"
@@ -66,5 +66,3 @@
     </section>
   </body>
 </html>
-
-
