--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
   <body class="fondo">
     <!-- Barra de navegacion y portada-->
 
-    <header class="portadai">
+    <header>
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
         style="background-color: silver;"
@@ -51,12 +51,13 @@
         style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_pills-on-blue-background-3936369.jpg?v=1589211449978);"
       >
         <div>
-          <p class="titulop">
+          <p>
             La Pandemia del siglo 21
           </p>
         </div>
       </div>
     </header>
+    <!-- cuerpo de la seccion-->
     <section class="indexcards">
       <div class="container mt-5 mb-5">
         <div class="row justify-content-start">
@@ -65,9 +66,9 @@
               <img
                 src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_1cdc-w9keokhajkw-unsplash.jpg?v=1588691997173"
                 class="card-img card-img-top"
-                alt="..."
+                alt="foto ciencia"
               />
-              <!-- cuerpo de la seccion-->
+
               <div class="card-body">
                 <h5 class="card-title">Para los amantes de la Ciencia</h5>
                 <p class="card-text">
@@ -85,13 +86,13 @@
               <img
                 src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_jamie-street-tb5a-qti6xg-unsplash.jpg?v=1588692229998"
                 class=" card-img card-img-top"
-                alt="..."
+                alt="foto salud"
               />
               <div class="card-body">
                 <h5 class="card-title">Salud en casa</h5>
                 <p class="card-text">
-                  Lista de compras inteligentes, ejercicio y recomendaciones para
-                  cuidar tu salud
+                  Lista de compras inteligentes, ejercicio y recomendaciones
+                  para cuidar tu salud
                 </p>
                 <a href="{{ url_for('salud') }}" class="btn btn-dark">Entrar</a>
               </div>
@@ -102,7 +103,7 @@
               <img
                 src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_jessica-lewis-vi6szzwgc34-unsplash.jpg?v=1589333623353"
                 class="card-img card-img-top"
-                alt="..."
+                alt="foto lavamanos"
               />
               <div class="card-body">
                 <h5 class="card-title">Información Útil</h5>
@@ -121,12 +122,13 @@
               <img
                 src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_anastasiia-chepinska-obmbhmrc3pw-unsplash.jpg?v=1589731177849"
                 class="card-img card-img-top"
-                alt="..."
+                alt="foto ventanal"
               />
               <div class="card-body">
-                <h5 class="card-title">Aprendizaje a distancia </h5>
+                <h5 class="card-title">Aprendizaje a distancia</h5>
                 <p class="card-text">
-                  Encontrá ideas para recrearte y consejos útlies para la educación a distancia 
+                  Encontrá ideas para recrearte y consejos útlies para la
+                  educación a distancia
                 </p>
                 <a href="{{ url_for('psico') }}" class="btn btn-dark">Entrar</a>
               </div>
@@ -150,6 +152,4 @@
     </section>
   </body>
 </html>
-
-
 
