--- a/templates/aprendizaje.html
+++ b/templates/aprendizaje.html
@@ -62,7 +62,7 @@
         />
         Sin importar el nivel educativo estés transitando es importante que
         fomentemos el aparendizaje en todo momento en nuestras casas.La
-        educación a distancia es todo un desafío para una persona en cualquier
+        educación a distancia es todo un desafío para una persona de cualquier
         edad.Aqui te brindamos algunos consejos para que la tarea de educarse en
         casa sea mas fácil.
       </p>
