--- a/templates/informacionc.html
+++ b/templates/informacionc.html
@@ -55,7 +55,7 @@
       <!-- cuerpo de la seccion-->
       <div class="indexcards">
         <p class="introsalud">
-          <h2><u> Pandemia de información:</u></h2>
+          <h2><u> Pandemia de información</u></h2>
           Nos encontramos frente a un mar inmenso de información acerca del Corona Virus, de los avances y descubrimientos de la ciencia sobre este tema.Para los curiosos que deseen investigar todo acerca de este virus te recomendamos primero que te pongasen contacto con algunos términos que encontrará en todo texto relacionado a a este virus tan particular.
         </p>
       </div>
@@ -107,7 +107,7 @@
     <div style="padding-left:10px;">
     
       <div class="text-center">
-        <img src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_fusion-medical-animation-rnr8d3fnuny-unsplash.jpg?v=1589478967364" class="traino img-thumbnail rounded">
+        <img src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_fusion-medical-animation-rnr8d3fnuny-unsplash.jpg?v=1589478967364" class="img-thumbnail rounded">
       </div>
     </div></div>
     
