--- a/templates/aprendizaje.html
+++ b/templates/aprendizaje.html
@@ -53,8 +53,8 @@
         Educación a distancia
       </h1>
     </div>
-     <!-- cuerpo de la seccion-->
-     <section class="indexcards">
+    <!-- cuerpo de la seccion-->
+    <section class="indexcards">
       <p class="introsalud">
         <img
           src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_edu.jpg?v=1589226915200 "
@@ -85,7 +85,7 @@
           atrasarse en las tareas.De este modo podrás disfrutar de otras cosas
           que además te gusten.
         </dd>
-        <dt><u>Toma recreos:</u></dt>
+        <dt><u>Tomá recreos:</u></dt>
         <dd>
           Intercalá intervalos de estudio de no mas de 2 horas con recreos para
           descansar.Está probado que son necesarios para asentar los
@@ -99,15 +99,17 @@
           computadora opta por imprimir los textos muy extensos para poder
           realizar las tareas que te pidan. Frente a una situacíon de exámen o
           clases virtuales asegurate de tener buena conectividad a una red Wifi
-          y que tu computadora se encuentre en buen estado, parte de nuestro deseempeño acádemico dependerá de un adecuado uso de la tecnología.
+          y que tu computadora se encuentre en buen estado, parte de nuestro
+          deseempeño acádemico dependerá de un adecuado uso de la tecnología.
         </dd>
         <dt><u>Renovación:</u></dt>
         <dd>
           Aprovechá para aprender cosas nuevas además de lo estrictamente
           académico.Los idiomas son muy interesantes y hay gran variedad de
-          modalidades a distancia, o podes optar por alguna especialización
-          que te interese.Todo es bienvenido a la hora de hacer crecer nuestros
-          conocimientos, está probado que mientras más fomentemos la conexión entre neuronas mejor. 
+          modalidades a distancia, o podes optar por alguna especialización que
+          te interese.Todo es bienvenido a la hora de hacer crecer nuestros
+          conocimientos, está probado que mientras más fomentemos la conexión
+          entre neuronas mejor.
         </dd>
       </dl>
     </div>
@@ -127,4 +129,3 @@
     </section>
   </body>
 </html>
-
