--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
               />
 
               <div class="card-body">
-                <h5 class="card-title">Para los amantes de la Ciencia</h5>
+                <h5 class="card-title">La Ciencia y el Corona Virus </h5>
                 <p class="card-text">
                   Informate sobre los avances y novedades de la ciencia de la
                   lucha contra el virus
@@ -125,7 +125,7 @@
                 alt="foto ventanal"
               />
               <div class="card-body">
-                <h5 class="card-title">Aprendizaje a distancia</h5>
+                <h5 class="card-title">Aprender en casa</h5>
                 <p class="card-text">
                   Encontrá ideas para recrearte y consejos útlies para la
                   educación a distancia
