--- a/templates/aprendizaje.html
+++ b/templates/aprendizaje.html
@@ -71,27 +71,27 @@
       <u><h2>Consejos útiles</h2></u>
 
       <dl>
-        <dt><u>Conocimiento de la herramienta:</u></dt>
+        <dt><u>Conocimiento de la herramienta</u></dt>
         <dd>
           Es sumamente necesario tener una buen conocimiento de la plataforma
           virtual que cada institución use.Familiarizate con la herramienta de
           comunicacíon entre alumnos y porofesores y si tenes dudas o preguntas
           no tardes en pedir ayuda.
         </dd>
-        <dt><u>Organización:</u></dt>
+        <dt><u>Organización</u></dt>
         <dd>
           Si bien las clases no son presenciales resulta útli tener una rutina,
           ajustala a tus horarios pero la organización es clave para no
           atrasarse en las tareas.De este modo podrás disfrutar de otras cosas
           que además te gusten.
         </dd>
-        <dt><u>Tomá recreos:</u></dt>
+        <dt><u>Tomá recreos</u></dt>
         <dd>
           Intercalá intervalos de estudio de no mas de 2 horas con recreos para
           descansar.Está probado que son necesarios para asentar los
           conocimientos.
         </dd>
-        <dt><u>Tecnología:</u></dt>
+        <dt><u>Tecnología</u></dt>
         <dd>
           Nos guste o no la tecnología es nuestro mejor aliado en esta
           circustancia, aprendamos a usarla, familiarizate con los programas de
@@ -102,7 +102,7 @@
           y que tu computadora se encuentre en buen estado, parte de nuestro
           deseempeño acádemico dependerá de un adecuado uso de la tecnología.
         </dd>
-        <dt><u>Renovación:</u></dt>
+        <dt><u>Renovación</u></dt>
         <dd>
           Aprovechá para aprender cosas nuevas además de lo estrictamente
           académico.Los idiomas son muy interesantes y hay gran variedad de
