--- a/templates/informacionc.html
+++ b/templates/informacionc.html
@@ -188,7 +188,7 @@
           />
           <div class="media-body">
             <h5 class="mt-0 mb-1">Conicet</h5>
-            <a href="https://www.nature.com/" class="btn btn-dark">Ir</a>
+            <a href="https://www.conicet.gov.ar/" class="btn btn-dark">Ir</a>
           </div>
         </li>
       </ul>
